# manga-trans

./: hello.py  pyproject.toml
server/app/: __init__.py  main.py
server/app/api/v1/endpoints/: __init__.py  executor.py  translate.py
server/app/core/: __init__.py  config.py  security.py
server/app/models/: __init__.py  translation.py
server/app/services/: __init__.py  executor.py  queue.py  translation.py
server/app/static/: index.html  manual.html
server/app/utils/: __init__.py  image.py  streaming.py
