[project]
name = "manga-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.2.1",
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.10",
    "aioshutil>=1.5",
    "arabic-reshaper>=3.0.0",
    "backports-cached-property>=1.0.2",
    "bitsandbytes>=0.45.0",
    "colorama>=0.4.6",
    "cryptography>=44.0.0",
    "ctranslate2>=4.5.0",
    "cython>=3.0.11",
    "deepl>=1.20.0",
    "editdistance>=0.8.1",
    "einops>=0.8.0",
    "fastapi>=0.115.6",
    "freetype-py>=2.5.1",
    "groq>=0.13.0",
    "httpx==0.27.2",
    "huggingface-hub>=0.26.5",
    "imagehash>=4.3.1",
    "ipykernel==6.29.5",
    "kornia>=0.7.4",
    "langcodes>=3.5.0",
    "langdetect>=1.0.9",
    "manga-ocr>=0.1.13",
    "marshmallow>=3.23.1",
    "nest-asyncio>=1.6.0",
    "networkx>=3.4.2",
    "numpy==1.26.4",
    "omegaconf>=2.3.0",
    "onnxruntime>=1.20.1",
    "open-clip-torch>=2.29.0",
    "openai==1.35.9",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "protobuf>=5.29.1",
    "py3langid==0.2.2",
    "pyclipper>=1.3.0.post6",
    "pydantic>=2.10.3",
    "pydensecrf",
    "pyhyphen>=4.0.4",
    "pylint==3.3.0",
    "pytest-sugar==0.9.6",
    "pytest-xdist==3.3.1",
    "pytest==7.2.2",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.19",
    "requests>=2.32.3",
    "safetensors>=0.4.5",
    "scikit-image>=0.25.0",
    "sentencepiece>=0.2.0",
    "shapely>=2.0.6",
    "tensorboardx>=2.6.2.2",
    "timm>=1.0.12",
    "torch>=2.5.1",
    "torch-summary>=1.4.5",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "transformers>=4.47.0",
    "uvicorn>=0.32.1",
    "websockets>=14.1",
    "pytest-asyncio==0.21.1",
]

# Optional: Add GitHub dependency for pydensecrf
# Note: You might need to handle this separately or use pip-style URL
# "pydensecrf @ git+https://github.com/lucasb-eyer/pydensecrf.git"

[tool.isort]
profile = 'black'
multi_line_output = 3
line_length = 100
py_version = 310

[tool.pylint]
disable = """
C,R,W,
c-extension-no-member
"""
additional-builtins = "display"
output-format = "colorized"
generated-members = ["torch.*", "cv2.*"]

[tool.pytest.ini_options]
addopts = "-ra -v -p no:faulthandler"
minversion = "6.0"
testpaths = ["test"]

[tool.uv.sources]
pydensecrf = { url = "https://github.com/lucasb-eyer/pydensecrf/archive/refs/heads/master.zip" }
